--- a/README.asciidoc
+++ b/README.asciidoc
@@ -13,7 +13,9 @@ This is my configuration for xmonad.
 Requirements
 ------------
 
-XMonad and XMonad contrib :: I'm using version 0.10 (as I write this).
+XMonad and XMonad contrib :: I'm using version 0.10 (as I write this). In
+Debian you need to remember to install libghc-xmonad-dev and
+libghc-xmonad-contrib-dev (not just the xmonad package).
 
 xmobar :: I'm using version 0.14 (as I write this).
 
@@ -178,3 +180,4 @@ anything but a xmonad configuration anyways.
 
 If in doubt, ask.
 =============================
+
