Explicitly specify font to restore to default font size
The XMonad upgrade (and fixing compile errors / deprecation warnings)
changed the font size in the prompt. It became too big and not all
options fit on screen. Explicitly specifying the font resolved the
issue. I selected the font that according to the Haddock docs is the
default - so I don't know why this is necessary. But it works.

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -45,8 +45,9 @@ do the latter).
 
 Compilation
 ------------
-Option 1 (preferred for when going to run): `xmonad --recompile`
-Option 2 (more useful when fixing compilation errors or warnings): `ghc xmonad.hs`
+`xmonad --recompile` :: preferred for when going to run the finished binary
+`ghc xmonad.hs` :: more useful when fixing compilation errors or warnings
+Alt-Q :: Recompile XMonad and restart it while in XMonad. Useful to test out the changes.
 
 
 Stuff you may want to copy
